--- a/roles/helm/tasks/main.yml
+++ b/roles/helm/tasks/main.yml
@@ -23,13 +23,22 @@
     src: "{{ dlcache }}/helm-{{ version }}.tar.gz"
     dest: /usr/local/bin
     copy: no
-    mode: 0755
     exclude:
     - LICENSE
     - README.md
     extra_opts:
     - --strip-components=1
   when: helm_version is failed or version not in helm_version.stdout_lines[0]
+  tags:
+  - kubernetes
+  - helm
+
+- name: "kubernetes | helm :: permission"
+  file:
+    path: /usr/local/bin/helm
+    owner: root
+    group: root
+    mode: '0755'
   tags:
   - kubernetes
   - helm
