--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -64,6 +64,7 @@
   - { name: k3d, tags: ["kubernetes", "k3d"] }
   - { name: k9s, tags: ["kubernetes", "k9s"] }
   - { name: kubectx, tags: ["kubernetes", "kubectx"] }
+  - { name: kubeseal, tags: ["kubernetes", "kubeseal"] }
   - { name: kustomize, tags: ["kubernetes", "kustomize"] }
   - { name: sops, tags: ["kubernetes", "sops"] }
   - { name: terraform, tags: ["kubernetes", "terraform"] }
