--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -70,6 +70,7 @@
   - { name: terraform, tags: ["kubernetes", "terraform"] }
   - { name: helm, tags: ["kubernetes", "helm"] }
   - { name: keycloak, tags: ["kubernetes", "keycloak"] }
+  - { name: gcloud, tags: ["kubernetes", "gcloud"] }
 
   - { name: variety, tags: ["special", "variety"] }
   - { name: signal, tags: ["special", "signal"] }
