--- a/roles/login_background/tasks/main.yml
+++ b/roles/login_background/tasks/main.yml
@@ -43,7 +43,9 @@
   - login-background
 
 - name: "special | login background changer apply"
-  shell: set -o pipefail && echo "n" | /usr/local/bin/change-gdm-background /usr/local/share/backgrounds/{{ background }}
+  shell:
+    cmd: set -o pipefail && echo n | /usr/local/bin/change-gdm-background /usr/local/share/backgrounds/{{ background }}
+    executable: /bin/bash
   changed_when: false
   when: ansible_distribution == "Ubuntu" and ansible_distribution_version is version("20.04", ">=")
   tags:
