--- a/roles/k3d/vars/main.yml
+++ b/roles/k3d/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-repo: rancher/k3d
-version: 5.0.1
-checksum: 84a45821b16df2fb60ab9144bad3d0e67805a2bfee17bee51b09bc1e75c0fc10
+repo: k3d-io/k3d
+version: 5.4.1
+checksum: 50f64747989dc1fcde5db5cb82f8ac132a174b607ca7dfdb13da2f0e509fda11
 platform: linux-amd64
