--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 # ===============================================
 [defaults]
 host_key_checking = False
-callback_whitelist = profile_tasks, timer
+callbacks_enabled = profile_tasks, timer
 ansible_managed = !!!! DO NOT MODIFY BY HAND, FILE AUTOMATICALLY GENERATED !!!!%nThis file is managed by https://github.com/lrobinot/dotfiles/%n
   template: {file}
   last updated: %d.%^b.%Y %H:%M
