--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -36,6 +36,17 @@
     group: "{{ groupid }}"
     mode: 0750
 
+- name: "shell | Zsh :: custom scripts"
+  copy:
+    src: "{{ item }}"
+    dest: "{{ homedir }}/.zsh.custom/{{ item }}"
+    owner: "{{ userid }}"
+    group: "{{ groupid }}"
+    mode: 0700
+  with_items:
+    - 000.aliases.sh
+    - 010.kubeconfig.sh
+
 - name: "shell | Zsh :: autosuggestions plugin"
   file:
     src: "{{ homedir }}/{{ dotdir }}/zsh-autosuggestions"
@@ -53,4 +64,3 @@
     owner: "{{ userid }}"
     group: "{{ groupid }}"
     mode: 0750
-
