--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -16,7 +16,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       state: read
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     register: favorites
     changed_when: false
 
@@ -24,7 +25,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       value: "{{ favorites.value | list_append('flameshot.desktop') }}"
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     changed_when: false
 
   when: wsl == "0"
