--- a/roles/obs/tasks/main.yml
+++ b/roles/obs/tasks/main.yml
@@ -29,7 +29,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       state: read
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     register: favorites
     changed_when: false
 
@@ -37,7 +38,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       value: "{{ favorites.value | list_append('com.obsproject.Studio.desktop') }}"
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     changed_when: false
 
   when: wsl == "0"
