--- a/roles/spotify/tasks/main.yml
+++ b/roles/spotify/tasks/main.yml
@@ -39,7 +39,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       state: read
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     register: favorites
     changed_when: false
 
@@ -47,7 +48,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       value: "{{ favorites.value | list_append('spotify.desktop') }}"
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     changed_when: false
 
   when: wsl == "0"
