Use new become syntax & fix alternatives syntax

--- a/roles/tilix/tasks/main.yml
+++ b/roles/tilix/tasks/main.yml
@@ -7,8 +7,10 @@
 - name: "terminal | Tilix :: alternatives"
   alternatives:
     name: x-terminal-emulator
-    path: /usr/bin/tilix.wrapper
+    path: /usr/bin/tilix
+    link: /usr/bin/tilix.wrapper
     priority: 100
+    state: selected
 
 - name: "terminal | Tilix :: fix vte issue"
   file:
@@ -25,7 +27,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       state: read
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     register: favorites
     changed_when: false
 
@@ -33,7 +36,8 @@
     dconf:
       key: /org/gnome/shell/favorite-apps
       value: "{{ favorites.value | list_insert_after('com.gexperts.Tilix.desktop', 'google-chrome.desktop') }}"
-    become: "{{ username }}"
+    become: true
+    become_user: "{{ username }}"
     changed_when: false
 
 - name: "terminal | Tilix :: auto-start"
@@ -67,26 +71,30 @@
   dconf:
     key: "/com/gexperts/Tilix/{{ item.key }}"
     value: "{{ item.value }}"
-  become: "{{ username }}"
+  become: true
+  become_user: "{{ username }}"
   with_items: "{{ tilix_prefs_global }}"
 
 - name: "terminal | Tilix :: key bindings"
   dconf:
     key: "/com/gexperts/Tilix/keybindings/{{ item.key }}"
     value: "{{ item.value | string }}"
-  become: "{{ username }}"
+  become: true
+  become_user: "{{ username }}"
   with_items: "{{ tilix_prefs_keybindings }}"
 
 - name: "terminal | Tilix :: apparence"
   dconf:
     key: "/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/{{ item.key }}"
     value: "{{ item.value | string }}"
-  become: "{{ username }}"
+  become: true
+  become_user: "{{ username }}"
   with_items: "{{ tilix_prefs_apparence }}"
 
 - name: "terminal | Tilix :: F12 key binding"
   dconf:
     key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/{{ item.key }}"
     value: "{{ item.value | string }}"
-  become: "{{ username }}"
+  become: true
+  become_user: "{{ username }}"
   with_items: "{{ tilix_prefs_hotkey }}"
