--- a/roles/spotify/tasks/main.yml
+++ b/roles/spotify/tasks/main.yml
@@ -3,7 +3,7 @@
 # chrome://flags/#hardware-media-key-handling to disable media key handler
 - name: "special | Spotify :: repository key"
   apt_key:
-    url: https://download.spotify.com/debian/pubkey.gpg
+    url: https://download.spotify.com/debian/pubkey_5E3C45D7B312C643.gpg
     state: present
   when: wsl == "0"
   tags:
