--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.2.0
+  rev: v4.3.0
   hooks:
   - id: trailing-whitespace
   - id: mixed-line-ending
@@ -10,11 +10,11 @@ repos:
   - id: check-added-large-files
   - id: check-executables-have-shebangs
 - repo: https://github.com/jumanjihouse/pre-commit-hooks
-  rev: master
+  rev: 3.0.0
   hooks:
   - id: shellcheck
 - repo: https://github.com/ansible/ansible-lint
-  rev: master
+  rev: v6.8.0
   hooks:
   - id: ansible-lint
     files: \.(yaml|yml)$
