feat(chrome): change repository key management

--- a/roles/chrome/tasks/main.yml
+++ b/roles/chrome/tasks/main.yml
@@ -1,56 +1,67 @@
 ---
-- name: "misc | Chrome :: repository key"
-  apt_key:
-    url: https://dl.google.com/linux/linux_signing_key.pub
-    state: present
-  when: wsl == "0"
+- name: "Misc | Chrome :: repository key"
+  ansible.builtin.get_url:
+    url: "{{ apt.key }}"
+    dest: "{{ keyrings_dir }}/{{ apt.name }}.asc"
+    owner: root
+    group: root
+    mode: 0644
+  register: key_asc
   tags:
-  - misc
-  - chrome
+    - misc
+    - chrome
 
-- name: "misc | Chrome :: repository"
-  apt_repository:
-    repo: deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main
-    state: present
-    filename: "google-chrome"
-    update_cache: "yes"
-  when: wsl == "0"
+- name: "Misc | Chrome :: repository key dearmor"
+  ansible.builtin.command:
+    cmd: gpg --dearmor --output {{ apt.name }}.gpg {{ apt.name }}.asc
+    chdir: "{{ keyrings_dir }}"
+    creates: "{{ apt.name }}.gpg"
+  when: key_asc.changed
   tags:
-  - misc
-  - chrome
+    - misc
+    - chrome
 
-- name: "misc | Chrome :: installation"
-  apt:
+- name: "Misc | Chrome :: repository"
+  ansible.builtin.template:
+    src: apt.sources.list.j2
+    dest: /etc/apt/sources.list.d/{{ apt.name }}.list
+    owner: root
+    group: root
+    mode: 0644
+  register: apt_repo
+  tags:
+    - misc
+    - chrome
+
+- name: "Misc | Chrome :: installation"
+  ansible.builtin.apt:
     name:
-    - google-chrome-stable
-    - chrome-gnome-shell
+      - google-chrome-stable
+      - chrome-gnome-shell
     state: present
-  when: wsl == "0"
+    update_cache: "{{ apt_repo.changed }}"
   tags:
-  - misc
-  - chrome
+    - misc
+    - chrome
 
-- name: "misc | Chrome :: favorite"
+- name: "Misc | Chrome :: favorite"
+  tags:
+    - misc
+    - chrome
   block:
+    - name: "Misc | Chrome :: favorite [1/2]"
+      community.general.dconf:
+        key: /org/gnome/shell/favorite-apps
+        state: read
+      become: true
+      become_user: "{{ username }}"
+      register: favorites
+      changed_when: false
 
-  - name: "misc | Chrome :: favorite [1/2]"
-    dconf:
-      key: /org/gnome/shell/favorite-apps
-      state: read
-    become: true
-    become_user: "{{ username }}"
-    register: favorites
-    changed_when: false
-
-  - name: "misc | Chrome :: favorite [2/2]"
-    dconf:
-      key: /org/gnome/shell/favorite-apps
-      value: "{{ favorites.value | list_insert_after('google-chrome.desktop', 'org.gnome.Nautilus.desktop') }}"
-    become: true
-    become_user: "{{ username }}"
-    changed_when: false
-
-  when: wsl == "0"
-  tags:
-  - misc
-  - chrome
+    - name: "Misc | Chrome :: favorite [2/2]"
+      community.general.dconf:
+        key: /org/gnome/shell/favorite-apps
+        value: "{{ favorites.value | list_insert_after('google-chrome.desktop', 'org.gnome.Nautilus.desktop') }}"
+      become: true
+      become_user: "{{ username }}"
+      changed_when: false
