chore(flameshot): ansible-lint warnings

--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -1,36 +1,32 @@
 ---
-- name: "special | Flameshot :: installation"
-  apt:
+- name: "Special | Flameshot :: installation"
+  ansible.builtin.apt:
     name: flameshot
     state: present
-  when: wsl == "0"
   tags:
-  - never
-  - special
-  - flameshot
+    - never
+    - special
+    - flameshot
 
-- name: "special | Flameshot :: favorite"
+- name: "Special | Flameshot :: favorite"
+  tags:
+    - never
+    - special
+    - flameshot
   block:
+    - name: "Special | Flameshot :: favorite [1/2]"
+      community.general.dconf:
+        key: /org/gnome/shell/favorite-apps
+        state: read
+      become: true
+      become_user: "{{ username }}"
+      register: favorites
+      changed_when: false
 
-  - name: "special | Flameshot :: favorite [1/2]"
-    dconf:
-      key: /org/gnome/shell/favorite-apps
-      state: read
-    become: true
-    become_user: "{{ username }}"
-    register: favorites
-    changed_when: false
-
-  - name: "special | Flameshot :: favorite [2/2]"
-    dconf:
-      key: /org/gnome/shell/favorite-apps
-      value: "{{ favorites.value | list_append('flameshot.desktop') }}"
-    become: true
-    become_user: "{{ username }}"
-    changed_when: false
-
-  when: wsl == "0"
-  tags:
-  - never
-  - special
-  - flameshot
+    - name: "Special | Flameshot :: favorite [2/2]"
+      community.general.dconf:
+        key: /org/gnome/shell/favorite-apps
+        value: "{{ favorites.value | list_append('flameshot.desktop') }}"
+      become: true
+      become_user: "{{ username }}"
+      changed_when: false
