--- a/roles/gcloud/vars/main.yml
+++ b/roles/gcloud/vars/main.yml
@@ -1,4 +1,7 @@
 ---
-version: 330.0.0
-# Checksum on https://cloud.google.com/sdk/docs/install
-checksum: 090c5723df115fe24dd1e83d9a19716ac180f6eea4fd0fe8ff5869a2120c78df
+apt:
+  key: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+  name: google-cloud-sdk
+  url: https://packages.cloud.google.com/apt
+  suite: cloud-sdk
+  component: main
