--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,28 +1,30 @@
 ---
-- name: "scm | Git :: repository"
-  apt_repository:
+- name: "SCM | Git :: repository"
+  ansible.builtin.apt_repository:
     repo: ppa:git-core/ppa
     filename: git
     mode: 0644
   tags:
-  - scm
-  - git
+    - scm
+    - git
 
-- name: "scm | Git :: installation"
-  apt:
-    name: ['git', 'git-flow']
+- name: "SCM | Git :: installation"
+  ansible.builtin.apt:
+    name:
+      - git
+      - git-flow
     state: present
   tags:
-  - scm
-  - git
+    - scm
+    - git
 
-- name: "scm | Git :: configuration"
-  template:
+- name: "SCM | Git :: configuration"
+  ansible.builtin.template:
     src: home/.gitconfig.j2
     dest: "{{ homedir }}/.gitconfig"
     owner: "{{ userid }}"
     group: "{{ groupid }}"
     mode: 0600
   tags:
-  - scm
-  - git
+    - scm
+    - git
