--- a/roles/helm/tasks/main.yml
+++ b/roles/helm/tasks/main.yml
@@ -1,45 +1,47 @@
 ---
-- name: "kubernetes | helm :: check"
-  command: helm version --short
-  ignore_errors: yes
+- name: "Kubernetes | helm :: check"
+  ansible.builtin.command:
+    cmd: helm version --short
+  ignore_errors: true
   no_log: true
   register: helm_version
   changed_when: false
   tags:
-  - kubernetes
-  - helm
+    - kubernetes
+    - helm
 
-- name: "kubernetes | helm :: download"
-  get_url:
+- name: "Kubernetes | helm :: download"
+  ansible.builtin.get_url:
     url: https://get.helm.sh/helm-v{{ version }}-linux-amd64.tar.gz
     dest: "{{ dlcache }}/helm-{{ version }}.tar.gz"
-    sha256sum: "{{ checksum }}"
+    checksum: sha256:{{ checksum }}
+    mode: 0644
   when: helm_version is failed or version not in helm_version.stdout_lines[0]
   tags:
-  - kubernetes
-  - helm
+    - kubernetes
+    - helm
 
-- name: "kubernetes | helm :: unarchive"
-  unarchive:
+- name: "Kubernetes | helm :: unarchive"
+  ansible.builtin.unarchive:
     src: "{{ dlcache }}/helm-{{ version }}.tar.gz"
     dest: /usr/local/bin
-    copy: no
+    copy: false
     exclude:
-    - LICENSE
-    - README.md
+      - LICENSE
+      - README.md
     extra_opts:
-    - --strip-components=1
+      - --strip-components=1
   when: helm_version is failed or version not in helm_version.stdout_lines[0]
   tags:
-  - kubernetes
-  - helm
+    - kubernetes
+    - helm
 
-- name: "kubernetes | helm :: permission"
-  file:
+- name: "Kubernetes | helm :: permission"
+  ansible.builtin.file:
     path: /usr/local/bin/helm
     owner: root
     group: root
-    mode: '0755'
+    mode: 0755
   tags:
-  - kubernetes
-  - helm
+    - kubernetes
+    - helm
