--- a/roles/kubectx/tasks/main.yml
+++ b/roles/kubectx/tasks/main.yml
@@ -1,30 +1,31 @@
 ---
-- name: "kubernetes | kubectx :: download"
-  get_url:
+- name: "Kubernetes | kubectx :: download"
+  ansible.builtin.get_url:
     url: https://github.com/{{ repo }}/releases/download/v{{ version }}/kubectx_v{{ version }}_{{ platform }}.tar.gz
     dest: "{{ dlcache }}/kubectx-{{ version }}.tar.gz"
     sha256sum: "{{ checksum }}"
+    mode: 0644
   tags:
-  - kubernetes
-  - kubectx
+    - kubernetes
+    - kubectx
 
-- name: "kubernetes | kubectx :: unarchive"
-  unarchive:
+- name: "Kubernetes | kubectx :: unarchive"
+  ansible.builtin.unarchive:
     src: "{{ dlcache }}/kubectx-{{ version }}.tar.gz"
     dest: /usr/local/bin
-    copy: no
+    copy: false
     exclude:
-    - LICENSE
+      - LICENSE
   tags:
-  - kubernetes
-  - kubectx
+    - kubernetes
+    - kubectx
 
-- name: "kubernetes | kubectx :: permission"
-  file:
+- name: "Kubernetes | kubectx :: permission"
+  ansible.builtin.file:
     path: /usr/local/bin/kubectx
     owner: root
     group: root
-    mode: '0755'
+    mode: 0755
   tags:
-  - kubernetes
-  - kubectx
+    - kubernetes
+    - kubectx
